// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactInfoLink /> should render Facebook 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-1:active {
  text-decoration-line: underline;
}

.emotion-2 {
  margin-right: 0.5rem;
  height: 1rem;
  width: 1rem;
  --tw-text-opacity: 1;
  color: rgb(66 103 178 / var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://www.facebook.com/laurilavanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-facebook"
      />
    </svg>
    <span>
      Facebook
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render LinkedIn 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-1:active {
  text-decoration-line: underline;
}

.emotion-2 {
  margin-right: 0.5rem;
  height: 1rem;
  width: 1rem;
  --tw-text-opacity: 1;
  color: rgb(14 118 168 / var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://www.linkedin.com/in/lapanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-linkedin"
      />
    </svg>
    <span>
      LinkedIn
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render Twitter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  font-size: 1rem;
  line-height: 1.5rem;
  --tw-text-opacity: 1;
  color: rgb(90 94 0 / var(--tw-text-opacity));
  text-decoration-line: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover {
  text-decoration-line: underline;
}

.emotion-1:active {
  text-decoration-line: underline;
}

.emotion-2 {
  margin-right: 0.5rem;
  height: 1rem;
  width: 1rem;
  --tw-text-opacity: 1;
  color: rgb(29 161 242 / var(--tw-text-opacity));
}

<li
  class="emotion-0"
>
  <a
    class="emotion-1"
    href="https://twitter.com/laurilavanti"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="emotion-2"
    >
      <use
        xlink:href="#icon-twitter"
      />
    </svg>
    <span>
      Twitter
    </span>
  </a>
</li>
`;

exports[`<ContactInfoLink /> should render lauri.lavanti@kirkkonummi.fi 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-right: 0.5rem;
  height: 1rem;
  width: 1rem;
}

<li
  class="emotion-0"
>
  <svg
    class="emotion-1"
  >
    <use
      xlink:href="#icon-envelope"
    />
  </svg>
  <span>
    lauri.lavanti@kirkkonummi.fi
  </span>
</li>
`;
